Fix Class Error
.

--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
     <header>
         <div class="cabecalho">
             <div class="cabecalho__logo">
-                <img src="/images/sett/Sett_Icon.png" alt="sett">
+                <img src="/images/sett/Sett_Icon.png" alt="Ícone do campeão Sett">
                 <h1 class="cabecalho__titulo">LOLGUIDE</h1>
             </div>
             <div class="cabecalho__menu">
@@ -31,54 +31,42 @@
         </div>
     </header>
 
-    <!-- Conteúdo principal -->
     <main>
         <section class="sobre">
-            <h3 class="sobre__titulo">O que é o LOLGUIDE?</h3>
+            <h2 class="sobre__titulo">O que é o LOLGUIDE?</h2>
             <p class="sobre__texto">
                 LOLGUIDE é um projeto que nasceu durante a Imersão Dev da Alura, com o objetivo de ser um guia completo
                 para os jogadores de League of Legends. Aqui, você pode pesquisar por campeões, descobrir informações detalhadas sobre suas habilidades,
-                rotas preferenciais
-                e builds otimizadas para diferentes momentos do jogo. Além disso, a página destaca campeões populares e
-                os mais fortes
-                do meta atual, permitindo uma navegação fácil e informativa.
+                rotas preferenciais e builds otimizadas para diferentes momentos do jogo. Além disso, a página destaca campeões populares e
+                os mais fortes do meta atual, permitindo uma navegação fácil e informativa.
             </p>
 
-            <h3 class="sobre__titulo">Por que criei este projeto?</h3>
+            <h2 class="sobre__titulo">Por que criei este projeto?</h2>
             <p class="sobre__texto">
                 Este projeto foi desenvolvido como parte do desafio proposto pela Imersão Dev da Alura. A Imersão é um
-                evento
-                educacional que permite aos participantes mergulharem em desenvolvimento web, aplicando conhecimentos de
-                HTML,
-                CSS e JavaScript na construção de projetos práticos. Como sou um grande fã de League of
-                    Legends, decidi unir
+                evento educacional que permite aos participantes mergulharem em desenvolvimento web, aplicando conhecimentos de
+                HTML, CSS e JavaScript na construção de projetos práticos. Como sou um grande fã de League of Legends, decidi unir
                 minha paixão pelo jogo com o aprendizado de desenvolvimento web, criando o LOLGUIDE.
             </p>   
-            </p>
 
-            <h3 class="sobre__titulo">Minha experiência na Imersão Dev</h3>
+            <h2 class="sobre__titulo">Minha experiência na Imersão Dev</h2>
             <p class="sobre__texto">
-                Participar da Imersão Dev foi uma experiência enriquecedora. Aprendi a transformar uma ideia em um
-                projeto concreto,
-                desenvolvendo habilidades essenciais para a carreira de desenvolvedor front-end. Utilizei tecnologias
-                como HTML5, CSS3
-                e JavaScript para construir um site responsivo e interativo, e o evento da Alura foi fundamental para
-                meu crescimento
+                Participar da Imersão Dev foi uma experiência enriquecedora. Aprendi a transformar uma ideia em um projeto concreto,
+                desenvolvendo habilidades essenciais para a carreira de desenvolvedor front-end. Utilizei tecnologias como HTML5, CSS3
+                e JavaScript para construir um site responsivo e interativo, e o evento da Alura foi fundamental para meu crescimento
                 nessa jornada.
             </p>
 
             <div class="divisao__imagem">
-                <img class="sobre__imagem" src="images/campeoes/sett/Sett_Pose.webp" alt="Pose do Sett">
+                <img class="sobre__imagem" src="/images/campeoes/sett/Sett_Pose.webp" alt="Pose do campeão Sett">
             </div>
         </section>
     </main>
 
-    <!-- Rodapé -->
     <footer>
         <div class="rodape">
             <p>
-                © LOLGUIDE - 2024 - Todos os direitos reservados <a href="https://www.riotgames.com/pt-br">Riot
-                    Games</a>
+                © LOLGUIDE - 2024 - Todos os direitos reservados <a href="https://www.riotgames.com/pt-br">Riot Games</a>
             </p>
             <p>
                 Site feito por <a href="https://github.com/luhsalim" target="_blank">Luhan Salim</a>
