--- a/campeoes/jg/amumu.html
+++ b/campeoes/jg/amumu.html
@@ -143,7 +143,7 @@
                                     <p>Health Potion</p>
                                 </div>
                             </div>
-                            <div class="item-container">
+                            <div class="container-iniciais">
                                 <div class="item">
                                     <img src="/images/items/starter-items/scorchclaw-pup-50x.png" alt="Scorchclaw Pup">
                                     <p>Scorchclaw Pup</p>
