--- a/campeoes/mid/ekko.html
+++ b/campeoes/mid/ekko.html
@@ -142,7 +142,7 @@
                                     <p>Health Potion</p>
                                 </div>
                             </div>
-                            <div class="item-container">
+                            <div class="container-iniciais">
                                 <div class="item">
                                     <img src="/images/items/starter-items/dorans-shield.webp" alt="Doran's Shield">
                                     <p>Doran's Shield</p>
