--- a/campeoes/mid/neeko.html
+++ b/campeoes/mid/neeko.html
@@ -143,7 +143,7 @@
                                     <p>Health Potion</p>
                                 </div>
                             </div>
-                            <div class="item-container">
+                            <div class="container-iniciais">
                                 <div class="item">
                                     <img src="/images/items/starter-items/tear-of-the-goddess.webp" alt="Tear of the godness">
                                     <p>Tear of the godness</p>
