--- a/campeoes/sup/rakan.html
+++ b/campeoes/sup/rakan.html
@@ -32,7 +32,7 @@
     <main>        
         <section id="info-campeao">
             <div class="container">
-                <div class="imagem-campeao" style="background-image: url(/images/campeoes/rakan/Rakan_0.png);">
+                <div class="imagem-campeao" style="background-image: url(/images/campeoes/rakan/Rakan_0.jpg);">
                     <div class="imagem__conteudo">
                         <h3>
                             O CHARMOSO
