--- a/campeoes/mid/lux.html
+++ b/campeoes/mid/lux.html
@@ -131,7 +131,7 @@
                         <h2>Itens Recomendados</h2>
                         
                         <!-- Itens Iniciais -->
-                        <<h3>Itens Iniciais</h3>
+                        <h3>Itens Iniciais</h3>
                         <div class="itens-iniciais">
                             <div class="container-iniciais">
                                 <div class="item">
